--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: design_with_dave
 subtitle: Let's get better at web design together.
 author: Dave Ceddia
 simple_search: https://www.google.com/search
-description: Are you a developer who wants to get better at design? Improve your web design skills with consistent practice with weekly exercises. We'll learn together.
+description: I'm a developer working to improve my design skills. Learn along with me! Get better at design with consistent practice and weekly exercises.
 keywords: developers,design,web design,software,website design,better design
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
