added fancy JS to render the underscored title after page load. hopefully help SEO a little?

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://dceddia.github.io
-title: design_with_dave
+title: design with dave
 subtitle: Let's get better at web design together.
 author: Dave Ceddia
 simple_search: https://www.google.com/search
